--- a/Game.htm
+++ b/Game.htm
@@ -78,8 +78,8 @@
 
 	if(playerWins > computerWins){
 		console.log("Congratulations! You Win!");
-	} else{
-	"Sorry. You Lose :("
+	} else {
+	console.log("Sorry. You Lose :(");
 	}
             
         </script>
